# jklm-py-client

./: .gitattributes  .gitignore  README.md  example.py  main.py  popbot.py  pyproject.toml  requirements.txt  setup.py  test.py
answers/: extract_pairs.py  popsauce_pairs.txt
client/: popbot.py
jklm/: __init__.py  exceptions.py  jklm.py
